--- a/style.css
+++ b/style.css
@@ -448,6 +448,8 @@ body {
 
     .card-modal {
         padding: 25px;
+        padding-bottom: 80px;
+        /* Added padding for Android controls */
         width: 95%;
         max-height: 90vh;
         /* Scroll if needed */
